        we do not recommend using patchless RHEL4 clients with kernels
        prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 12228
Description: LBUG in ptlrpc_check_set() bad phase ebc0de00
Details    : access to bitfield in structure is always rounded to long 
             and this produce problem with not atomic change any bit.

Severity   : normal
Bugzilla   : 13647
Description: Lustre make rpms failed.
Details    : Remove ldiskfs spec file to avoids rpmbuild be confused when
             builds Lustre rpms from tarball.

Severity   : enhancement
Bugzilla   : 14498
Description: Update to SLES9 SP4 kernel-2.6.5-7.308.

Severity   : normal
Frequency  : rare on shutdown ost
Bugzilla   : 14608
Description: If llog cancel was not send before clean_exports phase, this can
             produce deadlock in llog code.
Details    : If llog thread has last reference to obd and call class_import_put
             this produce deadlock because llog_cleanup_commit_master wait when
	     last llog_commit_thread exited, but this never success because was 
	     called from llog_commit_thread.

Severity   : normal
Bugzilla   : 14607
Description: NULL lov_tgts causing MDS oops
Details    : more safe checks for NULL lov_tgts for avoid oops.

Severity   : enhancement
Bugzilla   : 14531
Description: Update to RHEL4 latest kernel-2.6.9-67.0.1.EL.

Severity   : enhancement
Bugzilla   : 14368
Description: Update to RHEL5 latest kernel-2.6.18-53.1.4.el5.

Severity   : normal
Bugzilla   : 14136
Description: make mgs_setparam() handle fsname containing dash
Details    : fsname containing a dash does not work with lctl conf_param

Severity   : enhancement
Bugzilla   : 14288